# lazybucket

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/pages/: BucketView.jsx  Buckets.jsx  Login.jsx
migrations/: 001_init.sql
src/: config.rs  main.rs
src/api/: buckets.rs  middlewares.rs  mod.rs
src/api/handlers/: buckets.rs  health.rs  mod.rs  objects.rs
src/db/: buckets.rs  mod.rs  objects.rs
src/storage/: local.rs
