[package]
name = "lazybucket"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "=0.7.3"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
tempfile = "3"
